--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#core-concepts" class="nav-link">How It Works</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
-                <li><a href="privacy.html" class="nav-link">Privacy</a></li>
+                <li><a href="privacy.html" class="nav-link">Privacy Policy</a></li>
             </ul>
             <button class="nav-toggle" aria-label="Toggle navigation">
                 <span></span>
@@ -49,6 +49,17 @@
                 <div class="welcome-subtitle">
                     <h2 class="subtitle-main">Make life smoother</h2>
                     <p class="subtitle-description">Ask for support or lend your talents, build trust points, and connect with peers who've always got your back.</p>
+                </div>
+                
+                <!-- Download Button -->
+                <div class="download-section">
+                    <a href="#" class="download-button">
+                        <img src="images/shok-icon.svg" alt="ShokApp Icon" class="download-app-icon">
+                        <div class="download-text">
+                            <span class="download-line-1">Download on</span>
+                            <span class="download-line-2">App Store</span>
+                        </div>
+                    </a>
                 </div>
             </div>
             
@@ -219,16 +230,13 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <div class="footer-logo">
-                    <img src="images/logo.svg" alt="Shok" class="logo">
+                <div class="footer-brand">
+                    <img src="images/shok-icon.svg" alt="ShokApp" class="footer-icon">
+                    <span class="footer-name">ShokApp</span>
                 </div>
-                <div class="footer-links">
-                    <a href="privacy.html">Privacy Policy</a>
+                <div class="footer-copyright">
+                    <p>&copy; ShokApp 2025 all rights reserved.</p>
                 </div>
-
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 Shok. All rights reserved.</p>
             </div>
         </div>
     </footer>
