--- a/privacy.html
+++ b/privacy.html
@@ -21,16 +21,17 @@
     <nav class="nav">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="index.html">
-                    <img src="images/shok-icon.svg" alt="Shok" class="logo">
-                </a>
+                <img src="images/shok-icon.svg" alt="Shok" class="logo">
+                <div class="nav-text">
+                    <h1 class="nav-title gradient-text">ShokApp</h1>
+                    <p class="nav-subtitle">Help when you need it</p>
+                </div>
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="index.html#features" class="nav-link">Features</a></li>
                 <li><a href="index.html#core-concepts" class="nav-link">How It Works</a></li>
                 <li><a href="index.html#contact" class="nav-link">Contact</a></li>
-                <li><a href="privacy.html" class="nav-link">Privacy</a></li>
+                <li><a href="privacy.html" class="nav-link">Privacy Policy</a></li>
             </ul>
             <button class="nav-toggle" aria-label="Toggle navigation">
                 <span></span>
@@ -247,16 +248,13 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <div class="footer-logo">
-                    <img src="images/logo.svg" alt="Shok" class="logo">
+                <div class="footer-brand">
+                    <img src="images/shok-icon.svg" alt="ShokApp" class="footer-icon">
+                    <span class="footer-name">ShokApp</span>
                 </div>
-                <div class="footer-links">
-                    <a href="privacy.html">Privacy Policy</a>
+                <div class="footer-copyright">
+                    <p>&copy; ShokApp 2025 all rights reserved.</p>
                 </div>
-
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 Shok. All rights reserved.</p>
             </div>
         </div>
     </footer>
