--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
+                <li><a href="mission.html" class="nav-link">Our Mission</a></li>
                 <li><a href="#core-concepts" class="nav-link">How It Works</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
                 <li><a href="privacy.html" class="nav-link">Privacy Policy</a></li>
@@ -152,6 +153,7 @@
             </a>
         </div>
     </section>
+
 
 
 
