--- a/privacy.html
+++ b/privacy.html
@@ -29,9 +29,10 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html" class="nav-link">Home</a></li>
+                <li><a href="mission.html" class="nav-link">Our Mission</a></li>
                 <li><a href="index.html#core-concepts" class="nav-link">How It Works</a></li>
                 <li><a href="index.html#contact" class="nav-link">Contact</a></li>
-                <li><a href="privacy.html" class="nav-link">Privacy Policy</a></li>
+                <li><a href="privacy.html" class="nav-link active">Privacy Policy</a></li>
             </ul>
             <button class="nav-toggle" aria-label="Toggle navigation">
                 <span></span>
