--- a/privacy.html
+++ b/privacy.html
@@ -30,8 +30,6 @@
             <ul class="nav-menu">
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="mission.html" class="nav-link">Our Mission</a></li>
-                <li><a href="index.html#core-concepts" class="nav-link">How It Works</a></li>
-                <li><a href="index.html#contact" class="nav-link">Contact</a></li>
                 <li><a href="privacy.html" class="nav-link active">Privacy Policy</a></li>
             </ul>
             <button class="nav-toggle" aria-label="Toggle navigation">
@@ -247,15 +245,27 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
+        <div class="footer-content">
+            <div class="footer-left">
                 <div class="footer-brand">
                     <img src="images/shok-icon.svg" alt="ShokApp" class="footer-icon">
                     <span class="footer-name">ShokApp</span>
                 </div>
-                <div class="footer-copyright">
-                    <p>&copy; ShokApp 2025 all rights reserved.</p>
+            </div>
+            <div class="footer-contact">
+                <p class="footer-feedback">Have questions? We'd love to hear from you.</p>
+                <div class="footer-email-container">
+                    <div class="footer-email-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+                            <polyline points="22,6 12,13 2,6"/>
+                        </svg>
+                    </div>
+                    <a href="mailto:support@shok.app" class="footer-email">support@shok.app</a>
                 </div>
+            </div>
+            <div class="footer-copyright">
+                <p>&copy; ShokApp 2025 all rights reserved.</p>
             </div>
         </div>
     </footer>
