--- a/index.html
+++ b/index.html
@@ -127,15 +127,14 @@
                 <button class="carousel-arrow carousel-next" onclick="nextImage()">›</button>
             </div>
             
+            <!-- Mobile swipe hint -->
+            <div class="carousel-hint">
+                <span class="carousel-hint-text">← Swipe to browse screenshots →</span>
+            </div>
+            
             <div class="hero-description">
                 <p>Register with an invite code, get starter credits, then spend credits to request help or earn them by helping others or getting your friends to join. <strong>No credits, no posts.</strong> Bid to help: the lowest‑credit offer wins.</p>
             </div>
-        </div>
-        <div class="hero-scroll">
-            <a href="#footer" class="scroll-indicator">
-                <span>Scroll to explore</span>
-                <div class="scroll-arrow"></div>
-            </a>
         </div>
     </section>
 
