attempt to remove the html extension in links

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="mission.html" class="nav-link">Our Mission</a></li>
-                <li><a href="privacy.html" class="nav-link">Privacy Policy</a></li>
+                <li><a href="mission/" class="nav-link">Our Mission</a></li>
+                <li><a href="privacy/" class="nav-link">Privacy Policy</a></li>
             </ul>
             <button class="nav-toggle" aria-label="Toggle navigation">
                 <span></span>
