--- a/mission/index.html
+++ b/mission/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Mission - ShokApp</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" href="../images/favicon.svg" type="image/svg+xml">
 </head>
 <body>
     <!-- Navigation -->
@@ -13,16 +13,16 @@
         <div class="container">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <img src="images/shok-icon.svg" alt="Shok" class="logo">
+                    <img src="../images/shok-icon.svg" alt="Shok" class="logo">
                     <div class="nav-text">
                         <h1 class="nav-title gradient-text">ShokApp</h1>
                         <p class="nav-subtitle">Help when you need it</p>
                     </div>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="index.html" class="nav-link">Home</a></li>
-                    <li><a href="mission.html" class="nav-link active">Our Mission</a></li>
-                    <li><a href="privacy.html" class="nav-link">Privacy Policy</a></li>
+                                    <li><a href="../" class="nav-link">Home</a></li>
+                <li><a href="../mission/" class="nav-link active">Our Mission</a></li>
+                <li><a href="../privacy/" class="nav-link">Privacy Policy</a></li>
                 </ul>
                 <button class="nav-toggle" aria-label="Toggle navigation">
                     <span></span>
@@ -80,7 +80,7 @@
         <div class="footer-content">
             <div class="footer-left">
                 <div class="footer-brand">
-                    <img src="images/shok-icon.svg" alt="ShokApp" class="footer-icon">
+                    <img src="../images/shok-icon.svg" alt="ShokApp" class="footer-icon">
                     <span class="footer-name">ShokApp</span>
                 </div>
             </div>
@@ -103,6 +103,6 @@
     </footer>
 
     <!-- JavaScript -->
-    <script src="js/main.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 </html>
