updating title and description

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shok - iOS App</title>
-    <meta name="description" content="Shok - The ultimate iOS app experience. Download now and discover amazing features.">
+    <title>ShokApp - Download Now on App Store</title>
+    <meta name="description" content="Join the Shok community and connect with peers who've always got your back.">
     
     <!-- Preload critical assets -->
     <link rel="preload" href="css/style.css" as="style">
