updating link to the download button

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 
                 <!-- Download Button -->
                 <div class="download-section">
-                    <a href="#" class="download-button">
+                    <a href="https://apps.apple.com/de/app/shokapp/id6741045477?l=en-GB" target="_blank" rel="noopener noreferrer" class="download-button">
                         <img src="images/shok-icon.svg" alt="ShokApp Icon" class="download-app-icon">
                         <div class="download-text">
                             <span class="download-line-1">Download on</span>
